<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_register"
    tools:context="com.example.kevin.fileflirt.Register">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NewUserName"
        android:hint="@string/Licence_plate"
        android:textSize="25sp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Newemail"
        android:hint="@string/email"
        android:layout_below="@+id/NewUserName"
        android:textSize="25sp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newMobile"
        android:hint="@string/Mobile"
        android:layout_below="@+id/Newemail"
        android:textSize="25sp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NewuserPass"
        android:hint="@string/Password"
        android:layout_below="@+id/newMobile"
        android:textSize="25sp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Confirm_pass"
        android:hint="@string/ConfirmPass"
        android:layout_below="@+id/NewuserPass"
        android:textSize="25sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Layout_spinner1"
        android:layout_below="@+id/Confirm_pass"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="150dp"
            android:text="@string/sex"
            android:textSize="25sp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sex_spinner"
            android:layout_marginLeft="138dp"
            android:entries="@array/sex"
            android:textSize="25sp"
            android:paddingLeft="95dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Layout_spinner2"
        android:layout_below="@+id/Layout_spinner1"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="150dp"
            android:id="@+id/Relation"
            android:text="@string/Relation"
            android:textSize="25sp"
            android:paddingRight="10dp"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner2"
            android:layout_marginLeft="140dp"
            android:entries="@array/Relation"
            android:paddingLeft="95dp"/>

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Layout_spinner2"
        android:id="@+id/Layout_regbtn">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Register"
            android:id="@+id/RegisterBTN"
            android:textSize="20sp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Cancel"
            android:id="@+id/Cancel"
            android:textSize="20sp"
            />

    </LinearLayout>

</RelativeLayout>
