<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity"
    android:background="@drawable/file123">

    <ImageView
        android:layout_width="170dp"
        android:layout_height="179dp"
        android:src="@drawable/logo"
        android:id="@+id/logo"
        android:contentDescription="@string/Logo"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:padding="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/Licence_plate"
        android:id="@+id/userName"
        android:inputType="text"
        android:textSize="25sp"
        android:background="#fff"
        android:layout_below="@+id/logo"/>

    <EditText
        android:padding="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:id="@+id/userPass"
        android:inputType="text"
        android:textSize="25sp"
        android:background="#fff"
        android:layout_below="@+id/userName"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userPass"
        android:id="@+id/Layout_btn">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Login"
            android:id="@+id/Login"
            android:textSize="20sp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Register"
            android:id="@+id/Register"
            android:textSize="20sp"
            />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Exit"
        android:layout_gravity="center"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:text="@string/Close"
        android:layout_below="@+id/Layout_btn"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
